--- a/src/main/res/layout/list_item.xml
+++ b/src/main/res/layout/list_item.xml
@@ -5,31 +5,31 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:layout_marginBottom="20dp"
-    card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="10dp"
-    card_view:contentPadding="10dp">
+    android:layout_marginTop="20dp"
+    card_view:cardElevation="8dp">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="116dp">
 
         <ImageView
             android:id="@+id/news_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="169dp"
+            android:layout_gravity="center"
             android:transitionName="share"
-            android:paddingBottom="12dp" />
+            android:layout_height="116dp"
+            />
 
         <TextView
             android:id="@+id/news_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:gravity="bottom"
-            android:maxLines="2"
-            android:textSize="24sp" />
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="116dp"
+            android:layout_gravity="center"
+            android:fontFamily="serif"
+            android:maxLines="6"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
