--- a/src/main/res/layout/news_content.xml
+++ b/src/main/res/layout/news_content.xml
@@ -5,17 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:transitionName="share"
-        android:src="@mipmap/ic_launcher"/>
-
-    <TextView
+    <WebView
         android:id="@+id/text_content"
+        android:transitionName="share"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="这只是一段用来测试的文字，
-        没有任何实际的用途，在最终的项目中显示的是新闻的具体内容"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
